maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: illegal start of simple expression
    if (posXaSuivre == getX()+1 && posYaSuivre == getY())) {
                                                         ^